Se crean las interfaces del repositorio

--- a/IntroduccionCleanArchitectureE2.NorthWindRepositoriesEFCore/IntroduccionCleanArchitectureE2.NorthWindRepositoriesEFCore.csproj
+++ b/IntroduccionCleanArchitectureE2.NorthWindRepositoriesEFCore/IntroduccionCleanArchitectureE2.NorthWindRepositoriesEFCore.csproj
@@ -8,6 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IntroduccionCleanArchitectureE2.NorthWindEntities\IntroduccionCleanArchitectureE2.NorthWindEntities.csproj" />
   </ItemGroup>
 
 </Project>
